# agapeML

./: .gitignore  CMakeLists.txt
data/pennington_summer_24/: complete_data.csv  female.csv  male.csv
includes/models/: linear_regression.hpp
includes/util/: data_processing.hpp  scaler.hpp
src/: main.cpp
src/models/: linear_regression.cpp
src/util/: data_processing.cpp  scaler.cpp
